cart item/payment validation and ohter little things

--- a/src/InventoryBundle/Resources/views/inventory/new.html.twig
+++ b/src/InventoryBundle/Resources/views/inventory/new.html.twig
@@ -22,7 +22,7 @@
 						<button class="btn btn-primary btn-block" type="submit">Add</button>
 					</div>
 					<div class="col-md-6 form-group">
-						<a class="btn btn-danger btn-block" href="{{ path('product_show', { 'id': product.id }) }}">Back</a>
+						<a class="btn btn-danger btn-block" href="{{ path('inventory_index') }}">Back</a>
 					</div>
 				{{ form_end(form) }}
 			</div>
