--- a/src/SalesBundle/Resources/views/payment/new.html.twig
+++ b/src/SalesBundle/Resources/views/payment/new.html.twig
@@ -35,7 +35,7 @@
 					</div>
 					<div class="col-md-12 form-group">
 						<label>Total: </label>
-						<p>{{ total }}</p>
+						<p>{{ total | number_format(2) }}</p>
 					</div>
 					<div class="col-md-12 form-group">
 						<button type="submit" class="btn btn-primary btn-block">Submit</button>
