[Product] Finished index and showpage design

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -66,6 +66,7 @@
 		</div>
 
 		<script src="{{ asset("js/jquery.min.js") }}"></script>
+		<script src="{{ asset("js/popper.js") }}"></script>
 		<script src="{{ asset("js/bootstrap.min.js") }}"></script>
 		{% block javascripts %}{% endblock %}
 	</body>
