--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,10 +25,14 @@
 						<li class="nav-item">
 							<a class="nav-link" href="{{ path('inventory_index') }}">Inventory <span class="sr-only">(current)</span></a>
 						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="{{ path('cart_listing', {'id': app.user.id}) }}">Orders</a>
+						</li>
 					{% endif %}
 				</ul>
 				<ul class="navbar-nav ml-auto">
 					{% if app.user %}
+						{% if is_granted('ROLE_ADMIN') == false %}
 						<li class="nav-item">
 							{% for cart in app.user.carts  %}
 								{% if cart.isActive == true %}
@@ -41,6 +45,7 @@
 								{% endif %}
 							{% endfor %}
 						</li>
+						{% endif %}
 						<li class="nav-item">
 							<a class="nav-link" href="{{ path('fos_user_profile_show') }}">{{ app.user.firstName }} {{ app.user.lastName }}</a>
 						</li>
