--- a/src/SalesBundle/Resources/views/payment/show.html.twig
+++ b/src/SalesBundle/Resources/views/payment/show.html.twig
@@ -1,5 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {{ payment.paymentMode }}
+	<div class="row">
+		<div class="col-md-6 mx-auto r-panel">
+			<div class="r-panel-header p-sm">
+				<h3>Payment #{{ payment.id }}</h3>
+			</div>
+			<div class="r-panel-body container-fluid">
+				<div class="row p-md">
+					<div class="col-md-12 form-group">
+						<label>Order</label>
+						Order #{{ payment.cart.id }}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock body %}
