[Payment] Fixed email and updated payment message

--- a/app/Resources/views/email/e-mail.html.twig
+++ b/app/Resources/views/email/e-mail.html.twig
@@ -1,7 +1,7 @@
 <h3>Payment Details: </h3>
-<p><strong>Total: </strong>{{ payment.total | number_format(2) }}</p>
 <p><strong>Payment Mode: </strong>{{ payment.paymentMode }}</p>
-<p><strong>Cart Number: </strong>{{ payment.cardNumber }}</p>
+<p><strong>Card Number: </strong>{{ payment.cardNumber }}</p>
+<p><strong>Expiration: </strong>{{ payment.expirationMonth }}/{{ payment.expirationYear }}</p>
 
 <table class="table table-striped">
 	<thead>
@@ -23,3 +23,5 @@
 		{% endfor %}
 	</tbody>
 </table>
+
+<p><strong>Total: </strong>{{ payment.total | number_format(2) }}</p>
