--- a/src/SalesBundle/Resources/views/payment/show.html.twig
+++ b/src/SalesBundle/Resources/views/payment/show.html.twig
@@ -2,14 +2,15 @@
 
 {% block body %}
 	<div class="row">
-		<div class="col-md-4 mx-auto r-panel">
+		<div class="col-md-6 mx-auto r-panel">
 			<div class="r-panel-header p-sm">
 				<h1 class="label label-succes">Success!</h1>
 			</div>
 			<div class="r-panel-body container-fluid">
-					<div class="p-lg">
-						<h5>The order has successfully paid, go to <a href="{{ path('product_index') }}">products</a> now!</h3>
-					</div>
+				<div class="p-lg">
+					<h5>The order has successfully paid, check your e-mail for your order and payment details.
+					<br><br>Meanwhile... go to <a href="{{ path('product_index') }}">products</a> to shop for more!</h3>
+				</div>
 			</div>
 		</div>
 	</div>
