Added about and contact us page and fixed some design

--- a/src/CoreBundle/Resources/views/Security/login.html.twig
+++ b/src/CoreBundle/Resources/views/Security/login.html.twig
@@ -1,5 +1,7 @@
 {% extends "::auth.html.twig" %}
 
+{% block title %}Flowershop / Login{% endblock %}
+
 {% block body %}
 	<div class="login-container">
 		<div class="header">
