--- a/src/InventoryBundle/Resources/views/product/show.html.twig
+++ b/src/InventoryBundle/Resources/views/product/show.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Product / {{ product.name }}{% endblock %}
+
 {% block body %}
 	<div class="row">
 		<div class="col-md-6 mx-auto r-panel">
@@ -47,12 +49,11 @@
 			{% if is_granted('ROLE_ADMIN') == false %}
 				<div class="r-panel-footer p-sm">
 					{% if product.inventory.quantity > 0 %}
-						<h6 class="inline p-sm">Add to cart</h6>
 						{{ form_start(cart_item_form, {'action': path('cart_add_item', {'id': product.id}), 'method': 'POST', 'attr' : { 'class': 'form-inline float-right'}}) }}
 							<div class="form-group mx-sm-3 mb-2">
 								{{ form_widget(cart_item_form.quantity, {'attr': {'class': 'form-control', 'placeholder': 'Quantity'}}) }}
 							</div>
-							<button type="submit" class="btn btn-primary mb-2">
+							<button type="submit" class="btn btn-primary mb-2 p-l-lg p-r-lg">
 								<i class="fa fa-cart-arrow-down"></i>
 							</button>
 						{{ form_end(cart_item_form) }}			
