--- a/src/SalesBundle/Resources/views/payment/new.html.twig
+++ b/src/SalesBundle/Resources/views/payment/new.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Payment / New{% endblock %}
+
 {% block body %}
 	<div class="row">
 		<div class="col-md-4 mx-auto r-panel">
