--- a/web/css/style.scss
+++ b/web/css/style.scss
@@ -40,3 +40,14 @@ a {
 .content {
 	padding: 25px;
 }
+
+.navbar-brand {
+	font-weight: 400;
+	.navbar-logo {
+		height: 30px;
+	}
+}
+
+.logo {
+	width: 10vw;
+}
