--- a/app/Resources/views/auth.html.twig
+++ b/app/Resources/views/auth.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>{% block title %}Welcome!{% endblock %}</title>
+		<title>Flowershop / {% block title %}Home{% endblock %}</title>
 
 		<link href="{{ asset("css/bootstrap.min.css") }}" rel="stylesheet"/>
 		<link href="{{ asset("css/style.css") }}" rel="stylesheet"/>
