--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,16 +3,19 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>{% block title %}Welcome!{% endblock %}</title>
+		<title>{% block title %}Flowershop / Home{% endblock %}</title>
 
 		<link href="{{ asset("css/bootstrap.min.css") }}" rel="stylesheet"/>
 		<link href="{{ asset("css/style.css") }}" rel="stylesheet"/>
 		{% block stylesheets %}{% endblock %}
-		<link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+		<link rel="icon" type="image/x-icon" href="{{ asset('logo.png') }}" />
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light">
-			<a class="navbar-brand" href="{{ path('product_index') }}">Flowershop</a>
+			<a class="navbar-brand" href="{{ path('product_index') }}">
+				<img class="navbar-logo m-r-xs" src="{{ asset('logo.png') }}"/>
+				Flowershop
+			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -29,6 +32,9 @@
 							<a class="nav-link" href="{{ path('cart_listing', {'id': app.user.id}) }}">Orders</a>
 						</li>
 					{% endif %}
+					<li class="nav-item active">
+						<a class="nav-link" href="{{ path('misc') }}">About Us</a>
+					</li>
 				</ul>
 				<ul class="navbar-nav ml-auto">
 					{% if app.user %}
