--- a/src/CoreBundle/Resources/views/Registration/index.html.twig
+++ b/src/CoreBundle/Resources/views/Registration/index.html.twig
@@ -1,5 +1,7 @@
 {% extends "::auth.html.twig" %}
 
+{% block title %}Flowershop / Register{% endblock %}
+
 {% block body %}
 	<div class="login-container">
 		<div class="header">
