--- a/src/InventoryBundle/Resources/views/inventory/index.html.twig
+++ b/src/InventoryBundle/Resources/views/inventory/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Flowershop / Inventory{% endblock %}
+
 {% block body %}
 	<div class="row">
 		<div class="col-md-6 mx-auto r-panel">
