--- a/src/InventoryBundle/Resources/views/product/edit.html.twig
+++ b/src/InventoryBundle/Resources/views/product/edit.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Product / Edit{% endblock %}
+
 {% block body %}
 	<div class="row">
 		<div class="col-md-4 mx-auto r-panel">
