--- a/src/CoreBundle/Resources/views/ChangePassword/change_password.html.twig
+++ b/src/CoreBundle/Resources/views/ChangePassword/change_password.html.twig
@@ -1,3 +1,36 @@
-{% block fos_user_content %}
-{% include "@FOSUser/ChangePassword/change_password_content.html.twig" %}
-{% endblock fos_user_content %}
+{% extends 'base.html.twig' %}
+
+{% block title %}Flowershop / Change Password{% endblock %}
+
+{% block body %}
+	<div class="row">
+		<div class="col-md-4 mx-auto r-panel">
+			<div class="r-panel-header p-sm">
+				<h3>Change Password</h3>
+			</div>
+			<div class="r-panel-body p-lg">
+				{{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'fos_user_change_password' } }) }}
+                    <div class="form-group">
+                        {{ form_label(form.current_password) }}
+                        {{ form_widget(form.current_password, {'attr': {'class': 'form-box'}}) }}
+                        {{ form_errors(form.current_password) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.plainPassword.first) }}
+                        {{ form_widget(form.plainPassword.first, {'attr': {'class': 'form-box'}}) }}
+                        {{ form_errors(form.plainPassword.first) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_label(form.plainPassword.second) }}
+                        {{ form_widget(form.plainPassword.second, {'attr': {'class': 'form-box'}}) }}
+                        {{ form_errors(form.plainPassword.second) }}
+                    </div>
+                    <div>
+                        <input class="btn btn-primary btn-block" type="submit" value="Save" />
+                        <a class="btn btn-danger btn-block" href="{{ path('fos_user_profile_show') }}">Back</a>
+                    </div>
+                {{ form_end(form) }}
+			</div>
+		</div>
+	</div>
+{% endblock body %}
