--- a/src/CoreBundle/Resources/views/Profile/edit.html.twig
+++ b/src/CoreBundle/Resources/views/Profile/edit.html.twig
@@ -1,3 +1,56 @@
-{% block fos_user_content %}
-{% include "@FOSUser/Profile/edit_content.html.twig" %}
-{% endblock fos_user_content %}
+{% extends 'base.html.twig' %}
+
+{% block title %}Flowershop / Profile{% endblock %}
+
+{% block body %}
+	<div class="row">
+		<div class="col-md-4 mx-auto r-panel">
+			<div class="r-panel-header p-sm">
+				<h3>Edit Profile</h3>
+			</div>
+			<div class="r-panel-body p-lg">
+				{{ form_start(form, { 'action': path('fos_user_profile_edit'), 'attr': { 'class': 'fos_user_profile_edit' } }) }}
+					<div class="form-group">
+						{{ form_label(form.username) }}
+						{{ form_widget(form.username, {'attr': {'class': 'form-box'}}) }}
+						{{ form_errors(form.username) }}
+					</div>
+					<div class="form-group">
+						{{ form_label(form.email) }}
+						{{ form_widget(form.email, {'attr': {'class': 'form-box'}}) }}
+						{{ form_errors(form.email) }}
+					</div>
+					<div class="form-group">
+						{{ form_label(form.firstName) }}
+						{{ form_widget(form.firstName, {'attr': {'class': 'form-box'}}) }}
+						{{ form_errors(form.firstName) }}
+					</div>
+					<div class="form-group">
+						{{ form_label(form.lastName) }}
+						{{ form_widget(form.lastName, {'attr': {'class': 'form-box'}}) }}
+						{{ form_errors(form.lastName) }}
+					</div>
+					<div class="form-group">
+						{{ form_label(form.address) }}
+						{{ form_widget(form.address, {'attr': {'class': 'form-box'}}) }}
+						{{ form_errors(form.address) }}
+					</div>
+					<div class="form-group">
+						{{ form_label(form.contactDetails) }}
+						{{ form_widget(form.contactDetails, {'attr': {'class': 'form-box'}}) }}
+						{{ form_errors(form.contactDetails) }}
+					</div>
+					<div class="form-group">
+						{{ form_label(form.current_password) }}
+						{{ form_widget(form.current_password, {'attr': {'class': 'form-box'}}) }}
+						{{ form_errors(form.current_password) }}
+					</div>
+					<div>
+						<input class="btn btn-primary btn-block" type="submit" value="Save" />
+						<a class="btn btn-danger btn-block" href="{{ path('fos_user_profile_show') }}">Back </a>
+					</div>
+				{{ form_end(form) }}
+			</div>
+		</div>
+	</div>
+{% endblock body %}
