--- a/app/Resources/views/email/e-mail.html.twig
+++ b/app/Resources/views/email/e-mail.html.twig
@@ -1,9 +1,12 @@
 <h3>Payment Details: </h3>
 <p><strong>Payment Mode: </strong>{{ payment.paymentMode }}</p>
-<p><strong>Card Number: </strong>{{ payment.cardNumber }}</p>
-<p><strong>Expiration: </strong>{{ payment.expirationMonth }}/{{ payment.expirationYear }}</p>
-
-<table class="table table-striped">
+{% if payment.paymentMode == 'BDO' %}
+	<p><strong>Card Number: </strong>{{ payment.cardNumber }}</p>
+	<p><strong>Expiration: </strong>{{ payment.expirationMonth }}/{{ payment.expirationYear }}</p>
+{% elseif payment.paymentMode == 'Cebuana' %}
+	<p><strong>Reference Number: </strong>{{ payment.referenceNumber }}</p>
+{% endif %}
+<table border="1" class="table table-striped">
 	<thead>
 		<tr>
 			<th>Product</th>
