--- a/src/SalesBundle/Resources/views/payment/new.html.twig
+++ b/src/SalesBundle/Resources/views/payment/new.html.twig
@@ -21,14 +21,9 @@
 						{{ form_errors(form.cardNumber) }}
 					</div>
 					<div class="col-md-12 form-group">
-						{{ form_label(form.expirationMonth) }}
-						{{ form_widget(form.expirationMonth, {'attr': {'class': 'form-box'}}) }}
-						{{ form_errors(form.expirationMonth) }}
-					</div>
-					<div class="col-md-12 form-group">
-						{{ form_label(form.expirationYear) }}
-						{{ form_widget(form.expirationYear, {'attr': {'class': 'form-box'}}) }}
-						{{ form_errors(form.expirationYear) }}
+						{{ form_label(form.expirationDate) }}
+						{{ form_widget(form.expirationDate, {'attr': {'class': 'form-box'}}) }}
+						{{ form_errors(form.expirationDate) }}
 					</div>
 					<div class="col-md-12 form-group">
 						{{ form_label(form.referenceNumber) }}
