Made design more generic

--- a/src/InventoryBundle/Resources/views/inventory/index.html.twig
+++ b/src/InventoryBundle/Resources/views/inventory/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Flowershop / Inventory{% endblock %}
+{% block title %}{{ site_title }} / Inventory{% endblock %}
 
 {% block body %}
 	<div class="row">
