--- a/src/SalesBundle/Resources/views/cart/index.html.twig
+++ b/src/SalesBundle/Resources/views/cart/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Flowershop / Cart{% endblock %}
+{% block title %}{{ site_title }} / Cart{% endblock %}
 
 {% block body %}
 	<div class="row">
