--- a/app/Resources/views/auth.html.twig
+++ b/app/Resources/views/auth.html.twig
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Flowershop / {% block title %}Home{% endblock %}</title>
+		<title>{{ site_title }} / {% block title %}Home{% endblock %}</title>
 
 		<link href="{{ asset("css/bootstrap.min.css") }}" rel="stylesheet"/>
 		<link href="{{ asset("css/style.css") }}" rel="stylesheet"/>
 		{% block stylesheets %}{% endblock %}
-		<link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+		<link rel="icon" type="image/x-icon" href="{{ asset('logo.png') }}" />
         <style>
             body {
                 background: #363636;
