--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>{% block title %}Flowershop / Home{% endblock %}</title>
+		<title>{% block title %}{{ site_title }} / Home{% endblock %}</title>
 
 		<link href="{{ asset("css/bootstrap.min.css") }}" rel="stylesheet"/>
 		<link href="{{ asset("css/style.css") }}" rel="stylesheet"/>
@@ -14,7 +14,7 @@
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<a class="navbar-brand" href="{{ path('product_index') }}">
 				<img class="navbar-logo m-r-xs" src="{{ asset('logo.png') }}"/>
-				Flowershop
+				{{ site_title }}
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
