--- a/src/InventoryBundle/Resources/views/product/new.html.twig
+++ b/src/InventoryBundle/Resources/views/product/new.html.twig
@@ -9,7 +9,7 @@
 				<h2>New Product</h2>
 			</div>
 			<div class="r-panel-body container-fluid">
-				{{ form_start(form, {'attr': {'class': 'row align-left m-t-md'}}) }}
+				{{ form_start(form, {'attr': {'class': 'row align-left m-t-md', 'novalidate': 'novalidate'}}) }}
 					<div class="col-md-12 form-group">
 						{{ form_label(form.name) }}
 						{{ form_widget(form.name, {'attr': {'class': 'form-box'}}) }}
